<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/camera"
        android:title="@string/camera"
        android:icon="@drawable/baseline_camera_alt_24"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/baseline_search_24"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/baseline_person_24"
        />
    <item
        android:id="@+id/setting"
        android:title="@string/setting"
        />
    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        />

</menu>